--- a/src/App.css
+++ b/src/App.css
@@ -21,13 +21,14 @@ h1 {
 
 form {
   display: flex;
+  flex-direction: column;
   margin-bottom: 20px;
 }
 
 form input[type="text"] {
   flex: 1;
   padding: 10px;
-  margin-right: 10px;
+  margin: 10px;
 }
 
 form button {
@@ -64,7 +65,6 @@ form button:hover {
 
 .task-item input[type="checkbox"] {
   margin: 50px;
-  
 }
 
 .task-item button {
